--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -2,6 +2,8 @@ FROM mysql:latest
 
 MAINTAINER Vanderson Nunes <vann.nunes@gmail.com>
 
-EXPOSE 3306
+WORKDIR /var/data
 
 CMD ["mysqld"]
+
+EXPOSE 3306
