--- a/docker/nginx/sites/gaume.conf
+++ b/docker/nginx/sites/gaume.conf
@@ -1,9 +1,13 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
+    listen 80;
+    server_name dev.gaume.com;
 
-    root /var/www/default;
+    root /var/www/gaume/public;
     index index.php index.html index.htm;
+
+    location / {
+         try_files $uri $uri/ /index.php$is_args$args;
+    }
 
     location ~ \.php$ {
         try_files $uri /index.php =404;
@@ -17,5 +21,3 @@ server {
         deny all;
     }
 }
-
-
