--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,23 @@
-APP_NAME=Laravel
+APP_NAME=Gaume
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://gaume.com
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -31,3 +31,8 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+PASS_SALT=gaume123
+
+REST_CLIENT_ID=
+REST_CLIENT_SECRET=
