--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.4.*",
         "laravel/passport": "^2.0",
         "laravel/tinker": "~1.0",
+        "league/fractal": "^0.16.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
