--- a/docker/nginx/sites/gaume.conf
+++ b/docker/nginx/sites/gaume.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name dev.gaume.com;
+    server_name dev.monzy.com;
 
     root /var/www/gaume/public;
     index index.php index.html index.htm;
