--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "pusher-js": "^4.0.0"
   },
   "dependencies": {
     "vuedals": "^1.2.0"
