--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -3,8 +3,9 @@ FROM nginx:latest
 MAINTAINER Vanderson Nunes <vann.nunes@gmail.com>
 
 ADD conf/nginx.conf /etc/nginx/
-ADD sites/* /etc/nginx/sites-available/
-ADD sites/* /etc/nginx/sites-enabled/
+ADD sites/* /etc/nginx/conf.d/
+# ADD sites/* /etc/nginx/sites-available/
+# ADD sites/* /etc/nginx/sites-enabled/
 
 RUN echo "upstream php-upstream { server game-gym-php:9000; }" > /etc/nginx/conf.d/upstream.conf
 
