--- a/docker/nginx/sites/default.conf
+++ b/docker/nginx/sites/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen 80 default_server;
+    server_name localhost dev.monzy.com;
 
     root /var/www/gaume/public;
     index index.php index.html index.htm;
