--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Gaume
-APP_ENV=local
+APP_NAME=Monzy
+APP_ENV=
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://gaume.com
+APP_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=
@@ -15,11 +15,11 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
 
 REDIS_HOST=
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_PORT=
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -32,7 +32,12 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-PASS_SALT=gaume123
-
 REST_CLIENT_ID=
 REST_CLIENT_SECRET=
+
+#PERSONAL_CLIENT_ID: 2
+#REST_CLIENT_SECRET: YYMvDno2OCiyM3dbvZKsSBdAKDoVvszElVG8tQrW
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+
+INDEX_PAGES=false
