--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "v-autocomplete": "^1.2.0",
     "v-mask": "^1.3.0",
+    "vue-star-rating": "^1.4.0",
     "vuedals": "^1.2.0"
   }
 }
