--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=contatomonzy@gmail.com
+MAIL_FROM_NAME=Monzy
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -43,3 +45,4 @@ VAPID_PRIVATE_KEY=
 INDEX_PAGES=false
 
 MIN_AGE_STUDENT=14
+MIN_AGE_TEACHER=18
