--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/passport": "^2.0",
         "laravel/tinker": "~1.0",
         "league/fractal": "^0.16.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "michael/laravelpagseguro": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
