--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "~1.0",
         "league/fractal": "^0.16.0",
         "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "~2.6",
         "vwnunes/laravel-pagseguro": "^1.0"
     },
     "require-dev": {
