--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "pusher-js": "^4.0.0"
   },
   "dependencies": {
+    "laravel-echo": "^1.3.2",
+    "pusher-js": "^4.1.0",
     "v-autocomplete": "^1.2.0",
     "v-mask": "^1.3.0",
     "vue-star-rating": "^1.4.0",
+    "vue-timeago": "^3.3.6",
     "vuedals": "^1.2.0"
   }
 }
