Notificação de Avaliação, ajuste usuário offline

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 SESSION_DRIVER=file
-QUEUE_DRIVER=database
+QUEUE_DRIVER=pusher
 
 REDIS_HOST=
 REDIS_PASSWORD=
