--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,6 @@
   "/js/app.js": "/js/app.js",
   "/css/app.css": "/css/app.css",
   "/css/site.css": "/css/site.css",
-  "/js/site.js": "/js/site.js",
-  "/js/registration.js": "/js/registration.js"
+  "/js/registration.js": "/js/registration.js",
+  "/js/site.js": "/js/site.js"
 }
