--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "cmgmyr/messenger": "^2.14",
         "doctrine/dbal": "^2.5",
         "laravel-notification-channels/webpush": "^1.0",
         "laravel/framework": "5.4.*",
