Ajuste Novas versoes

--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,44 @@
 APP_NAME=Monzy
-APP_ENV=
-APP_KEY=
+APP_ENV=local
+APP_KEY=base64:4O3auLGn1jSZ5UpFzTiuyV5jEgAoC9QHS2QBuSYJtlk=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=
+APP_URL=http://dev.monzy.com
 
-DB_CONNECTION=mysql
+DB_CONNECTION=
 DB_HOST=
-DB_PORT=3306
+DB_PORT=
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+BROADCAST_DRIVER=pusher
+CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=pusher
+QUEUE_DRIVER=database
 
-REDIS_HOST=
-REDIS_PASSWORD=
-REDIS_PORT=
+REDIS_HOST=monzy-redis
+REDIS_PASSWORD=null
+REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=contatomonzy@gmail.com
-MAIL_FROM_NAME=Monzy
+MAIL_DRIVER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_CLUSTER=
 
-REST_CLIENT_ID=
-REST_CLIENT_SECRET=
+PASSPORT_CLIENT_ID=
+PASSPORT_CLIENT_SECRET=
 
-#PERSONAL_CLIENT_ID: 2
-#REST_CLIENT_SECRET: YYMvDno2OCiyM3dbvZKsSBdAKDoVvszElVG8tQrW
+
 VAPID_PUBLIC_KEY=
 VAPID_PRIVATE_KEY=
 
@@ -48,12 +47,12 @@ INDEX_PAGES=false
 MIN_AGE_STUDENT=14
 MIN_AGE_TEACHER=18
 
-DISQUES=true
+DISQUS=true
 
-PAGSEGURO_APP_ID=
-PAGSEGURO_APP_KEY=
+PAGSEGURO_EMAIL=
+PAGSEGURO_TOKEN=
 
 GOOGLE_ANALYTICS_ID=
 
-PROMO_DATE_LIMIT=
-PROMO_MONZY_POINTS=
+PROMO_DATE_LIMIT=15/11/2017
+PROMO_MONZY_POINTS=350
